--- a/alien_epicycles.ipynb
+++ b/alien_epicycles.ipynb
@@ -71,6 +71,85 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_112344/4016905437.py:29: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  r = np.sqrt(x[i-1]**2 + y[i-1]**2)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "cannot convert float NaN to integer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/mnt/edisk/FILES/CODING_2023/00_SOME3/0_Alien_Fourier/video_script_notebook/alien_epicycles.ipynb Cell 4\u001b[0m in \u001b[0;36m3\n\u001b[1;32m     <a href='vscode-notebook-cell:/mnt/edisk/FILES/CODING_2023/00_SOME3/0_Alien_Fourier/video_script_notebook/alien_epicycles.ipynb#X10sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m     ax \u001b[39m=\u001b[39m \u001b[39m-\u001b[39mG \u001b[39m*\u001b[39m M \u001b[39m*\u001b[39m x[i\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m/\u001b[39m r\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m3\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/mnt/edisk/FILES/CODING_2023/00_SOME3/0_Alien_Fourier/video_script_notebook/alien_epicycles.ipynb#X10sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m     ay \u001b[39m=\u001b[39m \u001b[39m-\u001b[39mG \u001b[39m*\u001b[39m M \u001b[39m*\u001b[39m y[i\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m/\u001b[39m r\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m3\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/mnt/edisk/FILES/CODING_2023/00_SOME3/0_Alien_Fourier/video_script_notebook/alien_epicycles.ipynb#X10sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m x[i] \u001b[39m=\u001b[39m x[i\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m+\u001b[39m vx \u001b[39m*\u001b[39m dt\n\u001b[1;32m     <a href='vscode-notebook-cell:/mnt/edisk/FILES/CODING_2023/00_SOME3/0_Alien_Fourier/video_script_notebook/alien_epicycles.ipynb#X10sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m y[i] \u001b[39m=\u001b[39m y[i\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m+\u001b[39m vy \u001b[39m*\u001b[39m dt\n\u001b[1;32m     <a href='vscode-notebook-cell:/mnt/edisk/FILES/CODING_2023/00_SOME3/0_Alien_Fourier/video_script_notebook/alien_epicycles.ipynb#X10sZmlsZQ%3D%3D?line=37'>38</a>\u001b[0m vx \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m ax \u001b[39m*\u001b[39m dt\n",
+      "\u001b[0;31mValueError\u001b[0m: cannot convert float NaN to integer"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Constants\n",
+    "G = 6.67430  # Gravitational constant\n",
+    "M = 1.989     # Mass of the Sun\n",
+    "\n",
+    "# Initial conditions\n",
+    "x0 = 1.496    # Initial x-coordinate (distance from the Sun)\n",
+    "y0 = 0           # Initial y-coordinate\n",
+    "vx0 = 0          # Initial velocity in x-direction\n",
+    "vy0 = 2.978    # Initial velocity in y-direction\n",
+    "\n",
+    "# Simulation parameters\n",
+    "dt = 3600        # Time step (1 hour in seconds)\n",
+    "total_time = 365 * 24 * 3600  # Total simulation time (1 year in seconds)\n",
+    "\n",
+    "# Arrays to store position and time\n",
+    "time = np.arange(0, total_time, dt)\n",
+    "x = np.zeros_like(time)\n",
+    "y = np.zeros_like(time)\n",
+    "\n",
+    "# Euler's method for numerical integration\n",
+    "x[0] = x0\n",
+    "y[0] = y0\n",
+    "vx = vx0\n",
+    "vy = vy0\n",
+    "for i in range(1, len(time)):\n",
+    "    r = np.sqrt(x[i-1]**2 + y[i-1]**2)\n",
+    "    if np.isclose(r, 0):\n",
+    "        ax = 0\n",
+    "        ay = 0\n",
+    "    else:\n",
+    "        ax = -G * M * x[i-1] / r**3\n",
+    "        ay = -G * M * y[i-1] / r**3\n",
+    "    x[i] = x[i-1] + vx * dt\n",
+    "    y[i] = y[i-1] + vy * dt\n",
+    "    vx += ax * dt\n",
+    "    vy += ay * dt\n",
+    "\n",
+    "# Plotting the orbit\n",
+    "plt.figure(figsize=(6, 6))\n",
+    "plt.plot(x, y)\n",
+    "plt.plot(0, 0, 'o', color='yellow', label='Sun')\n",
+    "plt.plot(x[0], y[0], 'o', color='blue', label='Planet')\n",
+    "plt.xlabel('x')\n",
+    "plt.ylabel('y')\n",
+    "plt.title('Orbit of the Planet')\n",
+    "plt.legend()\n",
+    "plt.axis('equal')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -207,8 +286,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
